--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.645.0",
     "@redwoodjs/api": "8.0.0",
     "@redwoodjs/api-server": "8.0.0",
     "@redwoodjs/auth-dbauth-api": "8.0.0",
