--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,10 @@
     "@redwoodjs/api": "8.0.0",
     "@redwoodjs/api-server": "8.0.0",
     "@redwoodjs/auth-dbauth-api": "8.0.0",
-    "@redwoodjs/graphql-server": "8.0.0"
+    "@redwoodjs/graphql-server": "8.0.0",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^10"
   }
 }
